trunk/test/T3/Pass/ifTest.ic
class A
{
	static void main(string[] args)
	{
		int a;
		
		if((5 == 3)||(7 < 3))
		{
			a = 5;
		}
		else
		{
			a = 3;
		}
	}
}